Fix schema tool window initialising with a useless scrollbar

--- a/src/module/query/query-tool.component.scss
+++ b/src/module/query/query-tool.component.scss
@@ -79,6 +79,7 @@
 }
 
 .schema-container {
+    flex: 1;
     display: flex;
     overflow: auto;
     scrollbar-gutter: stable;
